--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,8 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d72d59cb-a301-48ab-ab57-fd4acefcad62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['banana', 'cherry']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = ('apple', 'banana', 'cherry', 'mango')\n",
+    "(x, *y, z) = fruits\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d250f4bd-2b28-42e9-93c6-b74914f2783b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "banana cherry\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = ('apple', 'banana', 'cherry')\n",
+    "(x, *y) = fruits\n",
+    "print(*y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ce4ca4c-3d50-498d-b662-a85ebfb71ecc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f8bf8e8-25d4-4107-99c9-dbb82128eb48",
    "metadata": {},
    "outputs": [],
    "source": []
