--- a/test(real world).ipynb
+++ b/test(real world).ipynb
@@ -635,7 +635,7 @@
     "    a = \"Faulty\" if Faulty else \"OK\"\n",
     "    r.append((sensor, a))\n",
     "\n",
-    "print(r)"
+    "print(r)\n"
    ]
   },
   {
