--- a/variable.ipynb
+++ b/variable.ipynb
@@ -99,6 +99,111 @@
    "source": [
     "a 34 =34"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2f205c32-089d-452f-a0e3-13e83c9a96d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 10<5:\n",
+    "    print(\"hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "43e487bc-8ee7-4502-a447-363dec30f0d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 10>100:\n",
+    "    print(\"hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "43ff33d3-e9bc-4f07-8575-eafeef31be2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 10<5:\n",
+    "    print(\"a\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23b70f15-9349-4770-9aff-594a94cd4999",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "190abf74-7429-4d1f-abe9-380079d62bb9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "524b9f49-ef9f-488c-9860-22f286ba05be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fc405d9-6a25-49e5-af71-8e535929d003",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65c4443e-4064-4638-b5aa-fd7b196305c0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05c49143-6d1e-4cc6-bbc3-933661e2ebbb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47ef5032-90bc-4cf0-a8a9-ebeacfd3424b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2f38b6e-9cd3-4d86-a7fd-2dc40a0c9f89",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42f124fa-d7b1-423c-8940-5d2110c3ec7f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
